--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,41 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.openpay</groupId>
+			<artifactId>libreria-marvel</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+   			 <groupId>com.google.code.gson</groupId>
+	    	 <artifactId>gson</artifactId>
+	   		 <version>2.8.8</version> <!-- Versión más reciente de Gson -->
+		</dependency>
+		
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-core</artifactId>
+		    <version>5.6.3.Final</version> <!-- Versión actualizada de Hibernate -->
+		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.28</version>
+		</dependency>
+	
+	
 	</dependencies>
 
 	<build>
