--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=gestion-marvel
+
+marvel.public.key= 83a819784ce65b7de75979fe60942b39
+marvel.private.key= b7ef0bb546de9baaa6d5fa498a357bc7395b6a1a
+
+
+
+
+
+
+
+
+
+spring.datasource.url= jdbc:mysql://localhost:3306/RegistroMarvel?useSSL=false
+spring.datasource.username= root
+spring.datasource.password= contrasena
+spring.jpa.hibernate.ddl-auto= update
+
