--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,15 @@ marvel.private.key= b7ef0bb546de9baaa6d5fa498a357bc7395b6a1a
 
 
 
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName= org.h2.Driver
 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto = update
 
-
-spring.datasource.url= jdbc:mysql://localhost:3306/RegistroMarvel?useSSL=false
-spring.datasource.username= root
-spring.datasource.password= contrasena
-spring.jpa.hibernate.ddl-auto= update
+spring.h2.console.enabled = true
+localhost:8080/h2-console
+spring.h2.console.path = /h2-ui
 
